# agentic-context-engine

./: .env.example  .gitignore  ACE_V2_1_IMPROVEMENTS.md  AGENTS.md  Agents.md  CHANGELOG.md  CLAUDE.md  README.md  helicone_replay_playbook_v1.json  helicone_replay_playbook_v2.json  mkdocs.yml  pyproject.toml  setup.py  simple_chain_learned.json
.claude/: gsd-file-manifest.json  settings.json
.claude/commands/: finalize.md
.github/workflows/: publish.yml
ace/: __init__.py  adaptation.py  browser_use_integration.py  features.py  llm.py  prompt_manager.py  prompts_v2.py  prompts_v2_1.py  prompts_v3.py  roles.py  skillbook.py  updates.py
ace/cli/: __init__.py  client.py  cloud.py  setup.py
ace/core/: __init__.py  (+1 more)
demo/: COMPARATIVE_DEMO_README.md  DEMO_OUTPUT_PREVIEW.md  PRESENTATION_SCRIPT.md  QUICKSTART.md  README.md  RUN_WEB_DEMO.md  __init__.py  api_server.py  api_server_comparative.py  bug_hunter_environment.py  buggy_code_samples.py  demo_bug_hunter.py  llm_judge.py  pretrain_playbook.py  pretrained_playbook.json  requirements.txt
dev/: 404.html  index.html  sitemap.xml
docs/: ACE_DESIGN.md  CLI_DESIGN.md  COMPLETE_GUIDE_TO_ACE.md  INTEGRATION_GUIDE.md  INTEGRATION_PATTERNS.md  OPIK.md  PIPELINE_DESIGN.md  PYDANTIC_AI_MIGRATION.md  QUICK_START.md  RR_DESIGN.md  SETUP_GUIDE.md  index.md
examples/: advanced_prompts_v2.py  compare_v2_v2_1_prompts.py  helicone_data_ace_training.py  seahorse_emoji_ace.py  simple_ace_example.py
pipeline/: pipeline.py
scripts/: consolidate_skillbooks.py  run_benchmark.py  run_tau_benchmark.py
tests/: conftest.py  test_ace_core.py  test_ace_mcp_compatibility.py  test_ace_mcp_handlers.py  test_ace_next_core.py  test_ace_next_mcp_handlers.py  test_ace_next_mcp_models.py  test_ace_next_mcp_optional.py  test_ace_next_mcp_registry.py  test_ace_next_mcp_server.py  test_ace_next_runners.py  test_ace_next_steps.py  test_ace_runners.py  test_ace_steps.py  test_async_learning.py  test_benchmarks.py  test_claude_code_client.py  test_cloud_cli.py  test_cloud_e2e.py  test_features.py  test_instructor_integration.py  test_integration.py  test_integration_wrappers.py  test_langchain_client.py  test_litellm_client.py  test_load_traces_step.py  test_observability.py  test_openclaw.py  test_pipeline_exports.py  test_pipeline_hooks.py  test_prompt_manager.py  test_prompts_v2_1.py  test_pydantic_ai_integration.py  test_recursive_reflector.py  test_roles.py  test_sandbox.py  test_trace_context.py  test_tracing.py
(+247 files in other folders)
